Fix cms popup cta color and paragraph spacing

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -19,6 +19,11 @@
       text-align: center;
       font-size: 12px;
       }
+      .cms-content {
+        p {
+          padding: 0;
+        }
+      }
       .cerise-btn-width {
         width: 60%;
         margin: 0 auto;
